--- a/cap06/css/styles.css
+++ b/cap06/css/styles.css
@@ -13,3 +13,14 @@
 pre {
     font-size: 1.4em;
 }
+
+@media (max-width: 780px) {
+    h1 {
+        font-size: small;
+    }
+}
+@media (max-width: 1200px) {
+    h1 {
+        font-size: large;
+    }
+}
